--- a/style/join.scss
+++ b/style/join.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import './utill.scss';
 
 .wrapper{
     width: 100vw;
@@ -9,30 +10,73 @@
 
     .joinBox{
         width: 400px;
-        height: 700px;
-        padding: 50px;
+        height: auto;
+        padding: 40px;
         border: 1px solid #ccc;
         border-radius: 10px;
+
+        @include mobile_xl{
+            width: 380px;
+        }
+        @include mobile_l{
+            width: 350px;
+            padding: 35px;
+        }
+        @include mobile_m{
+            width: 300px;
+            padding: 30px;
+        }
+        @include mobile_s{
+            width: 280px;
+            padding: 20px;
+        }
 
         h2{
             padding: 10px 0;
             text-align: center;
             font-size: 50px;
             font-weight: bold;
+
+            @include mobile_xl{
+                font-size: 45px;
+            }
+            @include mobile_l{
+                font-size: 40px;
+            }
+            @include mobile_m{
+                font-size: 37px;
+            }
+            @include mobile_s{
+                padding: 8px 0;
+                font-size: 33px;
+            }
         }
 
         .user{
             padding: 20px 0;
+
+            @include mobile_l{
+                padding: 15px 0;
+            }
+            @include mobile_s{
+                padding: 12px 0;
+            }
 
             .joinId,
             .joinpw,
             .joinpw2,
             .name{
                 padding: 8px 0;
+
                 span{
                     display: block;
                     font-size: 14px;
+
+                    @include mobile_s{
+                        font-size: 12px;
+                    }
                 }
+
                 input{
                     width: 100%;
                     height: 50px;
@@ -42,6 +86,21 @@
                     border-bottom: 1px solid #ccc;
                     outline: none;
                     font-size: 17px;
+
+                    @include mobile_xl{
+                        height: 40px;
+                        font-size: 15px;
+                    }
+                    @include mobile_l{
+                        height: 37px;
+                        padding: 0 7px;
+                        font-size: 14px;
+                    }
+                    @include mobile_s{
+                        height: 35px;
+                        padding: 0 5px;
+                        font-size: 12px;
+                    }
                 }
                 .errorJoinId,
                 .errorJoinPw,
@@ -64,6 +123,17 @@
             border-radius: 10px;
             font-size: 20px;
             background: #ccc;
+
+            @include mobile_l{
+                height: 45px;
+                margin: 10px 0;
+                font-size: 17px;
+            }
+            @include mobile_s{
+                height: 40px;
+                margin: 8px 0;
+                font-size: 15px;
+            }
         }
     }
 
