--- a/style/login.css
+++ b/style/login.css
@@ -7,14 +7,36 @@
 }
 .wrapper .loginBox {
   width: 350px;
-  height: 500px;
+  height: auto;
   padding: 50px;
   border: 1px solid #ccc;
   border-radius: 10px;
 }
+@media (max-width: 1023px) {
+  .wrapper .loginBox {
+    width: 300px;
+    padding: 30px;
+  }
+}
+@media (max-width: 650px) {
+  .wrapper .loginBox {
+    width: 280px;
+    padding: 25px;
+  }
+}
 @media (max-width: 500px) {
   .wrapper .loginBox {
-    border: none;
+    width: 250px;
+  }
+}
+@media (max-width: 400px) {
+  .wrapper .loginBox {
+    width: 230px;
+  }
+}
+@media (max-width: 350px) {
+  .wrapper .loginBox {
+    width: 90vw;
   }
 }
 .wrapper .loginBox h2 {
@@ -23,8 +45,46 @@
   font-size: 50px;
   font-weight: bold;
 }
+@media (max-width: 1023px) {
+  .wrapper .loginBox h2 {
+    padding: 10px 0;
+    font-size: 40px;
+  }
+}
+@media (max-width: 650px) {
+  .wrapper .loginBox h2 {
+    padding: 8px 0;
+    font-size: 37px;
+  }
+}
+@media (max-width: 500px) {
+  .wrapper .loginBox h2 {
+    padding: 5px 0;
+    font-size: 32px;
+  }
+}
+@media (max-width: 350px) {
+  .wrapper .loginBox h2 {
+    font-size: 28px;
+  }
+}
 .wrapper .loginBox .idPw {
   padding: 20px 0;
+}
+@media (max-width: 650px) {
+  .wrapper .loginBox .idPw {
+    padding: 15px 0;
+  }
+}
+@media (max-width: 500px) {
+  .wrapper .loginBox .idPw {
+    padding: 10px 0;
+  }
+}
+@media (max-width: 350px) {
+  .wrapper .loginBox .idPw {
+    padding: 8px 0;
+  }
 }
 .wrapper .loginBox .idPw .id,
 .wrapper .loginBox .idPw .pass {
@@ -34,6 +94,12 @@
 .wrapper .loginBox .idPw .pass span {
   display: block;
   font-size: 14px;
+}
+@media (max-width: 500px) {
+  .wrapper .loginBox .idPw .id span,
+  .wrapper .loginBox .idPw .pass span {
+    font-size: 12px;
+  }
 }
 .wrapper .loginBox .idPw .id input,
 .wrapper .loginBox .idPw .pass input {
@@ -45,6 +111,20 @@
   border-bottom: 1px solid #ccc;
   outline: none;
   font-size: 18px;
+}
+@media (max-width: 650px) {
+  .wrapper .loginBox .idPw .id input,
+  .wrapper .loginBox .idPw .pass input {
+    height: 40px;
+    font-size: 16px;
+  }
+}
+@media (max-width: 500px) {
+  .wrapper .loginBox .idPw .id input,
+  .wrapper .loginBox .idPw .pass input {
+    height: 30px;
+    font-size: 14px;
+  }
 }
 .wrapper .loginBox .idPw .id .errorId,
 .wrapper .loginBox .idPw .id .errorPw,
@@ -65,12 +145,38 @@
   font-size: 20px;
   background: #ccc;
 }
+@media (max-width: 1023px) {
+  .wrapper .loginBox button {
+    height: 45px;
+    margin: 15px 0 10px;
+    font-size: 18px;
+  }
+}
+@media (max-width: 650px) {
+  .wrapper .loginBox button {
+    height: 40px;
+    margin: 10px 0 8px;
+    font-size: 16px;
+  }
+}
 .wrapper .loginBox .join .sign {
   display: block;
   text-align: center;
   margin-bottom: 30px;
   font-size: 18px;
   cursor: pointer;
+}
+@media (max-width: 1023px) {
+  .wrapper .loginBox .join .sign {
+    font-size: 16px;
+    margin-bottom: 25px;
+  }
+}
+@media (max-width: 650px) {
+  .wrapper .loginBox .join .sign {
+    font-size: 14px;
+    margin-bottom: 15px;
+  }
 }
 .wrapper .loginBox .join .sns {
   display: flex;
@@ -84,6 +190,18 @@
   height: 40px;
   border-radius: 50%;
   overflow: hidden;
+}
+@media (max-width: 1023px) {
+  .wrapper .loginBox .join .sns a {
+    width: 35px;
+    height: 35px;
+  }
+}
+@media (max-width: 650px) {
+  .wrapper .loginBox .join .sns a {
+    width: 30px;
+    height: 30px;
+  }
 }
 .wrapper .loginBox .join .sns .facebook {
   background: url("../img/sns_facebook.png") no-repeat center center/contain;
