--- a/style/login.scss
+++ b/style/login.scss
@@ -7,16 +7,30 @@
     display: flex;
     justify-content: center;
     align-items: center;
-        
+    
     .loginBox{
         width: 350px;
-        height: 500px;
+        height: auto;
         padding: 50px;
         border: 1px solid $borderColor;
         border-radius: 10px;
 
-        @include mobile_m {
-            border: none;
+        @include tablet{
+            width: 300px;
+            padding: 30px;
+        }
+        @include mobile_l{
+            width: 280px;
+            padding: 25px;
+        }
+        @include mobile_m{
+            width: 250px;
+        }
+        @include mobile_s{
+            width: 230px;
+        }
+        @include mobile_xs{
+            width: 90vw;
         }
 
         h2{
@@ -24,17 +38,48 @@
             text-align: center;
             font-size: 50px;
             font-weight: bold;
+
+            @include tablet{
+                padding: 10px 0;
+                font-size: 40px;
+            }
+            @include mobile_l{
+                padding: 8px 0;
+                font-size: 37px;
+            }
+            @include mobile_m{
+                padding: 5px 0;
+                font-size: 32px;
+            }
+            @include mobile_xs{
+                font-size: 28px;
+            }
         }
 
         .idPw{
             padding: 20px 0;
 
+            @include mobile_l{
+                padding: 15px 0;
+            }
+            @include mobile_m{
+                padding: 10px 0;
+            }
+            @include mobile_xs{
+                padding: 8px 0;
+            }
+
             .id,
             .pass{
                 padding: 10px 0;
+
                 span{
                     display: block;
                     font-size: 14px;
+
+                    @include mobile_m{
+                        font-size: 12px;
+                    }
                 }
                 input{
                     width: 100%;
@@ -45,6 +90,15 @@
                     border-bottom: 1px solid $borderColor;
                     outline: none;
                     font-size: 18px;
+
+                    @include mobile_l{
+                        height: 40px;
+                        font-size: 16px;
+                    }
+                    @include mobile_m{
+                        height: 30px;
+                        font-size: 14px;
+                    }
                 }
                 .errorId,
                 .errorPw{
@@ -65,6 +119,17 @@
             border-radius: 10px;
             font-size: 20px;
             background: $borderColor;
+
+            @include tablet{
+                height: 45px;
+                margin: 15px 0 10px;
+                font-size: 18px;
+            }
+            @include mobile_l{
+                height: 40px;
+                margin: 10px 0 8px;
+                font-size: 16px;
+            }
         }
 
         .join{
@@ -74,6 +139,15 @@
                 margin-bottom: 30px;
                 font-size: 18px;
                 cursor: pointer;
+
+                @include tablet{
+                    font-size: 16px;
+                    margin-bottom: 25px;
+                }
+                @include mobile_l{
+                    font-size: 14px;
+                    margin-bottom: 15px;
+                }
             }
             .sns{
                 display: flex;
@@ -85,6 +159,15 @@
                     height: 40px;
                     border-radius: 50%;
                     overflow: hidden;
+
+                    @include tablet{
+                        width: 35px;
+                        height: 35px;
+                    }
+                    @include mobile_l{
+                        width: 30px;
+                        height: 30px;
+                    }
                 }
                 .facebook{
                     background: url('../img/sns_facebook.png') no-repeat center center / contain;
